--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(18, 202, 95);
+    background-color: rgb(0, 230, 230);
 }
 
 header {
@@ -81,7 +81,7 @@ header>h1 {
 
 .choice:hover {
     cursor: pointer;
-    background: orange;
+    background: #ff99ff;
 }
 
 #action-message {
@@ -92,3 +92,18 @@ header>h1 {
     font-size: 20px;
     margin-top: 20px;
 }
+
+.greenglow {
+    border: 4px solid #4dcc7d;
+    box-shadow: 0 0 10px #31b43a;
+    }
+
+.redglow {
+    border: 4px solid red;
+    box-shadow: 0 0 10px red;
+    }
+
+.orangeglow {
+    border: 4px solid darkblue;
+    box-shadow: 0 0 10px darkblue;
+    }
